kubernetes/kfca/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    app.kubernetes.io/instance: k8s-federated-credential
    kubernetes.io/metadata.name: k8s-federated-credential
  name: k8s-federated-credential
