kubernetes/kfca/base/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: k8s-federated-credential
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-traffic
  namespace: k8s-federated-credential
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  policyTypes:
    - Egress
  podSelector: {}
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-dns
          podSelector:
            matchLabels:
              dns.operator.openshift.io/daemonset-dns: default
      ports:
        - port: 5353
          protocol: UDP
        - port: 5353
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-ingress
  namespace: k8s-federated-credential
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  policyTypes:
    - Ingress
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress # podSelector:
          #   matchLabels:
          #     ingresscontroller.operator.openshift.io/deployment-ingresscontroller: default
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internet-egress
  namespace: k8s-federated-credential
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  policyTypes:
    - Egress
  podSelector: {}
  # Google Domains
  # https://support.google.com/a/answer/10026322?hl=en
  # https://www.gstatic.com/ipranges/goog.json
  egress:
    - to:
        - ipBlock:
            cidr: 142.250.0.0/15
    - to:
        - ipBlock:
            cidr: 172.217.0.0/16
    # TODO Fix CIDRs
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            # except:
            # - 10.0.0.0/8
            # - 172.16.0.0/12
            # - 192.168.0.0/16
